# jimwlk

./: CMakeLists.txt  Makefile  Makefile.inc  README.md  input  input.txt  main.cpp
jimwlk.xcodeproj/: project.pbxproj
jimwlk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jimwlk.xcodeproj/xcuserdata/heikkimantysaari.xcuserdatad/xcschemes/: jimwlk.xcscheme  xcschememanagement.plist
protons/: genplot_proton_evolution.py
src/: CMakeLists.txt  Cell.cpp  Cell.h  FFT.cpp  FFT.h  Group.cpp  Infrared.cpp  Infrared.h  Init.cpp  Init.h  Lattice.cpp  Lattice.h  Makefile  Matrix.cpp  Matrix.h  MatrixExp.cpp  MatrixExp.h  Measure.cpp  Measure.h  Parameters.h  Random.cpp  Random.h  Setup.cpp  Setup.h  backupInit.cpp  main.cpp
